# camera_calib_opencv

./: CMakeLists.txt  images_list.xml  omni_camera_params.xml  out_camera_params.xml
samples/: CMakeLists.txt  camera_save.cpp  omni_calibration.cpp
src/: CMakeLists.txt
